fixed alignment on terrenos

--- a/style.css
+++ b/style.css
@@ -655,9 +655,8 @@ input[type="submit"]:hover {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
   width: 100%;
-  margin-bottom: 50px;
+  margin-bottom: 70px;
 }
 
 .terrenos {
